<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/color_white"
    tools:context=".Activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/navigettr_applogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/tv_register"
                android:visibility="gone"
                android:textColor="@color/color_purple"
                android:textSize="@dimen/font_size_24dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_firstname"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="@dimen/marginTop_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_lastname"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="@dimen/marginTop_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_email"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="@dimen/marginTop_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_password_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_password_reg"
                    android:inputType="textPassword"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginTop="@dimen/marginTop_register"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register">

                <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.8" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_phone"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="30dp"
                android:background="@color/color_purple"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/tv_register"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_16dp" />

            <LinearLayout
                android:id="@+id/ll_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/msg_already_register"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_14dp" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt_signin"
                    android:textColor="@color/color_purple"
                    android:textSize="@dimen/font_size_16dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgrtPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/txt_forget"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_14dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>