<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/navigettr_applogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/app_name"
                android:visibility="gone"
                android:textColor="@color/color_purple"
                android:textSize="@dimen/font_size_24dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_username"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgrtPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"
                android:text="@string/txt_forget"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_14dp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginTop="30dp"
                android:background="@color/color_purple"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/tv_login"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_size_16dp" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edit_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_register"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_14dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edit_back" />
            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/ll_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/msg_register"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_size_14dp" />

                <TextView
                    android:id="@+id/tv_register_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt_signup"
                    android:textColor="@color/color_purple"
                    android:textSize="@dimen/font_size_16dp" />

            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/ll_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_forgrtPsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt_forget"
                    android:textColor="@color/color_black"
                    android:textSize="12sp" />

            </LinearLayout>-->

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>