<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/navigettr_applogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:visibility="gone"
                android:text="@string/txt_forgotTitle"
                android:textColor="@color/color_purple"
                android:textSize="@dimen/font_size_24dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/color_hint_grey">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_purple"
                    android:hint="@string/et_email"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_hint_grey" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/marginHorizontal_register"
                android:background="@color/color_purple"
                android:text="@string/tv_send"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>